--- a/FSSH/search-sh.html
+++ b/FSSH/search-sh.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>中學部圖書搜尋</title>
+<title>復興中學-中學部圖書搜尋</title>
 <style>
   body, html {
     margin: 0;
